<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/signup_iv_robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:src="@drawable/robot_login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:transitionName="@string/animation_logo_image"

        />

    <ImageView
        android:id="@+id/signup_iv_bulb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bulb_login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:transitionName="@string/animation_logo_image_bulb"

        />

    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
        android:id="@+id/signup_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:loader_animDur="100"
        app:loader_bigCircleRadius="42dp"
        app:loader_circleRadius="14dp"
        app:loader_defaultColor="@color/light_gray"
        app:loader_firstShadowColor="@color/medium_gray"
        app:loader_secondShadowColor="@color/medium_gray"
        app:loader_selectedColor="@color/dark_gray"
        app:loader_showRunningShadow="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_iv_robot"
        >

        <TextView
            android:id="@+id/signup_tv_h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_buna"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform"
            android:textFontWeight="900"
            android:layout_marginTop="10dp"
            android:textSize="20sp"

            android:transitionName="@string/animation_text_h1"
            />

        <TextView
            android:id="@+id/signup_tv_h3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/singup_inregistreaza_te_pentru_a_incepe"
            android:textColor="@color/black"
            android:textFontWeight="300"
            android:textSize="15sp"

            android:transitionName="@string/animation_secondary_text"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_til_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_tiet_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_email"
                tools:ignore="SpeakableTextPresentCheck"

                android:transitionName="@string/animation_username"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:counterMaxLength="15"
            app:counterEnabled="false"

            android:transitionName="@string/animation_password"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_tiet_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                tools:ignore="SpeakableTextPresentCheck"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_gray"
            android:transitionName="@string/animation_forgot_password"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signup_fab_next"
            style="@style/MyFabStyle"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:layout_marginRight="8dp"

            android:transitionName="@string/animation_button_next"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/signup_tv_ai_cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup_ai_deja_un_cont"
                android:layout_gravity="center"
                android:textFontWeight="500"
                android:textSize="15sp"

                android:transitionName="@string/animation_new_user"
                />

            <Button
                android:id="@+id/signup_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/signup_login"
                android:textColor="@color/coral"
                android:textAllCaps="false"
                android:textFontWeight="500"
                android:textSize="15sp"

                android:transitionName="@string/animation_sign_up"
                />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>