<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/form_dialog_bg">

    <LinearLayout
        android:id="@+id/dialog_add_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dialog_add_room_iv_close"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/vector_icon"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/dialog_add_room_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6.5"

            android:text="@string/adauga_camera"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_add_room_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="2.5"
            android:backgroundTint="@color/light_gray"
            android:text="@string/salveaza"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dialog_add_ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_ll_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nume_identificare_camera" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_room_tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exemple_room"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            android:textStyle="italic"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tip_camera" />

        <Spinner
            android:id="@+id/dialog_add_room_spn_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>