<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">


    <ImageView
        android:id="@+id/splash_iw_robot"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/splash_screen_robot"

        app:layout_constraintTop_toBottomOf="@id/splash_iw_bulb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:layout_constraintBottom_toTopOf="@id/tw_splash_wattescu"

        android:transitionName="@string/animation_logo_image"
        />

    <ImageView
        android:id="@+id/splash_iw_bulb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/bulb_splash"
        android:transitionName="@string/animation_logo_image_bulb"

        app:layout_constraintBottom_toTopOf="@id/splash_iw_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_splash_wattescu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/exwayer"
        android:text="@string/splash_screen_title_wattescu"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_iw_robot"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>